add Preconnect for google-analytics domain

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,3 +3,4 @@
 {% include icons.html %}
 <link rel="stylesheet" href="/assets/css/styles.css">
 <!-- <link rel="stylesheet" href="https://pmarsceill.github.io/just-the-docs/assets/css/just-the-docs.css"> -->
+<link rel="preconnect" href="https://www.google-analytics.com">
